--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU 0  will be allocated\n"
+      "GPU 1  will be allocated\n"
      ]
     }
    ],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,6 +231,158 @@
    ],
    "source": [
     "print(len(outliers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load models\n",
+    "def load_models(path):\n",
+    "  \"\"\"\n",
+    "    This function search for keras models in an folder and loads\n",
+    "    it to a list en returns a list of models. Models which contains \n",
+    "    the substring \"best_model\" are excluded.\n",
+    "    Args:\n",
+    "      path: were to search for models\n",
+    "  \"\"\"\n",
+    "  \n",
+    "  import glob\n",
+    "  list_of_models = glob.glob(path + '/*.h5')\n",
+    "  models = []\n",
+    "  \n",
+    "  for i, path in enumerate(list_of_models):\n",
+    "    if 'best_model' in path:\n",
+    "      pass\n",
+    "    else: \n",
+    "      models.append(load_model(path))\n",
+    "\n",
+    "  return models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Noise reduction curve multi models\n",
+    "def noise_reduction_curve_multi_models(models, path, fpr, plot=True, x_low_lim=0.8, save_outputs=True, models_to_plot=[]):\n",
+    "  \"\"\"\n",
+    "    This function takes signal and noise loss as arguments. They are \n",
+    "    arrays from mse calculating.\n",
+    "    Bins is taken from hist\n",
+    "    Args: \n",
+    "      models: a list of keras models\n",
+    "      path: where the plots saves\n",
+    "      fpr: False Positive Rate \n",
+    "      x_low_lim: limit for lowest x value on plot (highest=1)\n",
+    "    Returns:\n",
+    "      thershold: value for a specific False Positive Ratio fpr for best model\n",
+    "      tpr: True positive ratio for best model\n",
+    "      fpr: False positive ratio for best model\n",
+    "      tnr: True negative ratio for best model\n",
+    "      fnr: False negative ratio for best model\n",
+    "      results[0][4]: noise reduction factor for first model\n",
+    "\n",
+    "  \"\"\"\n",
+    "  number_of_models = len(models)\n",
+    "  results = [0]*number_of_models\n",
+    "  for j in range(number_of_models):\n",
+    "    \n",
+    "    model = models[j]\n",
+    "    not_found_treshold_value = True\n",
+    "    signal_loss, noise_loss = prep_loss_values(model, x_test, smask_test)\n",
+    "    \n",
+    "    max_value = np.max(signal_loss)\n",
+    "    min_value = np.min(noise_loss)\n",
+    "    low_lim = np.floor(np.log10(min_value))\n",
+    "    high_lim = np.floor(np.log10(max_value))\n",
+    "    bins = np.logspace(low_lim,high_lim , 1000)\n",
+    "\n",
+    "\n",
+    "    threshold_value = 0\n",
+    "    true_pos = np.zeros(len(bins))\n",
+    "    false_pos = np.zeros(len(bins))\n",
+    "    true_neg = np.zeros(len(bins))\n",
+    "    false_neg = np.zeros(len(bins))\n",
+    "    noise_reduction_factor = np.zeros(len(bins))\n",
+    "\n",
+    "\n",
+    "    tpr = 0\n",
+    "    for i, limit in enumerate(bins):\n",
+    "    \n",
+    "      true_pos[i] = np.count_nonzero(signal_loss > limit)/len(signal_loss)\n",
+    "      false_pos[i] =np.count_nonzero(noise_loss > limit)/len(noise_loss)\n",
+    "      true_neg[i] = 1 - false_pos[i]\n",
+    "      false_neg[i] = 1 - true_pos[i]\n",
+    "    \n",
+    "\n",
+    "      if (true_neg[i] < 1):\n",
+    "        noise_reduction_factor[i] = 1 / ( 1 - true_neg[i])\n",
+    "      else:\n",
+    "        noise_reduction_factor[i] = len(noise_loss)  \n",
+    "      \n",
+    "      \n",
+    "      if false_pos[i] < fpr and not_found_treshold_value:\n",
+    "        threshold_value = limit\n",
+    "        tpr = true_pos[i]\n",
+    "        not_found_treshold_value = False\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    fnr = 1 - tpr\n",
+    "    tnr = 1 - fpr\n",
+    "    \n",
+    "\n",
+    "    results[j] = [true_pos, true_neg, false_pos, false_neg, noise_reduction_factor]\n",
+    "\n",
+    "    \n",
+    "\n",
+    "  \n",
+    "  if plot:\n",
+    "    if len(models_to_plot) < 1:\n",
+    "      models_to_plot = np.arange(0,len(models))\n",
+    "\n",
+    "    for k in models_to_plot:\n",
+    "      model_name = 'model ' + str(k+1)\n",
+    "      plt.plot(results[k][0],results[k][4], label=model_name)  \n",
+    "      \n",
+    "    noise_events = np.count_nonzero(~smask_test)\n",
+    "\n",
+    "    plt.legend()\n",
+    "    plt.ylabel(f'Noise reduction factor. Total {noise_events} noise events')\n",
+    "    plt.xlabel('Efficiency/True Positive Rate')\n",
+    "    plt.title('Signal efficiency vs. noise reduction factor')\n",
+    "    plt.semilogy(True)\n",
+    "    plt.xlim(x_low_lim,1)\n",
+    "    plt.grid()\n",
+    "    if len(models) > 1:\n",
+    "      path = path + '/Signal_efficiency_vs_noise_reduction_factor_all_models.png'\n",
+    "    else:\n",
+    "      path = path + '_Signal_efficiency_vs_noise_reduction_factor.png'  \n",
+    "    plt.tight_layout()\n",
+    "    if save_outputs:\n",
+    "      plt.savefig(path)\n",
+    "\n",
+    "    plt.show()\n",
+    "  # plt.plot(false_pos, true_pos)\n",
+    "  # plt.show()\n",
+    "\n",
+    "  return threshold_value, tpr, fpr, tnr, fnr, results[0][4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '/home/halin/Autoencoder/Models/CNN_002'\n",
+    "models = load_models(path)\n",
+    "_ = "
    ]
   }
  ],
