--- a/Autoencoder_noise_rejection_CNN.ipynb
+++ b/Autoencoder_noise_rejection_CNN.ipynb
@@ -1585,7 +1585,75 @@
       "Epoch 314/500\n",
       "670/670 [==============================] - 33s 50ms/step - loss: 0.8369 - mse: 0.8369 - mae: 0.7130 - mape: 1021.8221 - val_loss: 0.8377 - val_mse: 0.8377 - val_mae: 0.7133 - val_mape: 809.0428\n",
       "Epoch 315/500\n",
-      "669/670 [============================>.] - ETA: 0s - loss: 0.8371 - mse: 0.8371 - mae: 0.7131 - mape: 1065.3958"
+      "670/670 [==============================] - 33s 49ms/step - loss: 0.8371 - mse: 0.8371 - mae: 0.7131 - mape: 1064.8600 - val_loss: 0.8379 - val_mse: 0.8379 - val_mae: 0.7135 - val_mape: 923.2201\n",
+      "Epoch 316/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8369 - mse: 0.8369 - mae: 0.7129 - mape: 1033.6948 - val_loss: 0.8390 - val_mse: 0.8390 - val_mae: 0.7142 - val_mape: 786.7432\n",
+      "Epoch 317/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8370 - mse: 0.8370 - mae: 0.7130 - mape: 1054.6948 - val_loss: 0.8375 - val_mse: 0.8375 - val_mae: 0.7132 - val_mape: 790.4274\n",
+      "Epoch 318/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8369 - mse: 0.8369 - mae: 0.7130 - mape: 1046.4716 - val_loss: 0.8375 - val_mse: 0.8375 - val_mae: 0.7132 - val_mape: 1001.3961\n",
+      "Epoch 319/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8369 - mse: 0.8369 - mae: 0.7129 - mape: 1086.2426 - val_loss: 0.8374 - val_mse: 0.8374 - val_mae: 0.7132 - val_mape: 948.8386\n",
+      "Epoch 320/500\n",
+      "670/670 [==============================] - 34s 51ms/step - loss: 0.8368 - mse: 0.8368 - mae: 0.7129 - mape: 1046.0658 - val_loss: 0.8376 - val_mse: 0.8376 - val_mae: 0.7133 - val_mape: 832.9819\n",
+      "Epoch 321/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8369 - mse: 0.8369 - mae: 0.7130 - mape: 1063.0007 - val_loss: 0.8383 - val_mse: 0.8383 - val_mae: 0.7138 - val_mape: 844.7606\n",
+      "Epoch 322/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8368 - mse: 0.8368 - mae: 0.7129 - mape: 1028.4658 - val_loss: 0.8382 - val_mse: 0.8382 - val_mae: 0.7136 - val_mape: 986.3974\n",
+      "Epoch 323/500\n",
+      "670/670 [==============================] - 34s 51ms/step - loss: 0.8368 - mse: 0.8368 - mae: 0.7129 - mape: 1039.5554 - val_loss: 0.8374 - val_mse: 0.8374 - val_mae: 0.7132 - val_mape: 843.4040\n",
+      "Epoch 324/500\n",
+      "670/670 [==============================] - 33s 49ms/step - loss: 0.8368 - mse: 0.8368 - mae: 0.7129 - mape: 1042.6185 - val_loss: 0.8374 - val_mse: 0.8374 - val_mae: 0.7132 - val_mape: 810.7401\n",
+      "Epoch 325/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8368 - mse: 0.8368 - mae: 0.7129 - mape: 1025.9703 - val_loss: 0.8378 - val_mse: 0.8378 - val_mae: 0.7134 - val_mape: 800.4484\n",
+      "Epoch 326/500\n",
+      "670/670 [==============================] - 33s 49ms/step - loss: 0.8367 - mse: 0.8367 - mae: 0.7129 - mape: 1045.4271 - val_loss: 0.8372 - val_mse: 0.8372 - val_mae: 0.7130 - val_mape: 750.7529\n",
+      "Epoch 327/500\n",
+      "670/670 [==============================] - 33s 50ms/step - loss: 0.8367 - mse: 0.8367 - mae: 0.7129 - mape: 1019.9020 - val_loss: 0.8372 - val_mse: 0.8372 - val_mae: 0.7130 - val_mape: 847.6737\n",
+      "Epoch 328/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8367 - mse: 0.8367 - mae: 0.7129 - mape: 1042.6925 - val_loss: 0.8372 - val_mse: 0.8372 - val_mae: 0.7131 - val_mape: 871.7405\n",
+      "Epoch 329/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8367 - mse: 0.8367 - mae: 0.7128 - mape: 1035.9509 - val_loss: 0.8372 - val_mse: 0.8372 - val_mae: 0.7130 - val_mape: 876.2239\n",
+      "Epoch 330/500\n",
+      "670/670 [==============================] - 33s 50ms/step - loss: 0.8367 - mse: 0.8367 - mae: 0.7128 - mape: 1020.9867 - val_loss: 0.8375 - val_mse: 0.8375 - val_mae: 0.7132 - val_mape: 879.2553\n",
+      "Epoch 331/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8366 - mse: 0.8366 - mae: 0.7128 - mape: 1030.7767 - val_loss: 0.8380 - val_mse: 0.8380 - val_mae: 0.7135 - val_mape: 848.2283\n",
+      "Epoch 332/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8367 - mse: 0.8367 - mae: 0.7128 - mape: 1057.0221 - val_loss: 0.8374 - val_mse: 0.8374 - val_mae: 0.7131 - val_mape: 875.1706\n",
+      "Epoch 333/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8366 - mse: 0.8366 - mae: 0.7128 - mape: 1029.3660 - val_loss: 0.8371 - val_mse: 0.8371 - val_mae: 0.7129 - val_mape: 859.2524\n",
+      "Epoch 334/500\n",
+      "670/670 [==============================] - 34s 51ms/step - loss: 0.8366 - mse: 0.8366 - mae: 0.7128 - mape: 1089.6724 - val_loss: 0.8371 - val_mse: 0.8371 - val_mae: 0.7130 - val_mape: 1010.5662\n",
+      "Epoch 335/500\n",
+      "670/670 [==============================] - 33s 50ms/step - loss: 0.8366 - mse: 0.8366 - mae: 0.7128 - mape: 1079.3083 - val_loss: 0.8371 - val_mse: 0.8371 - val_mae: 0.7130 - val_mape: 725.8082\n",
+      "Epoch 336/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8365 - mse: 0.8365 - mae: 0.7127 - mape: 1061.3679 - val_loss: 0.8380 - val_mse: 0.8380 - val_mae: 0.7136 - val_mape: 963.2557\n",
+      "Epoch 337/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8366 - mse: 0.8366 - mae: 0.7128 - mape: 1026.5122 - val_loss: 0.8371 - val_mse: 0.8371 - val_mae: 0.7129 - val_mape: 992.4544\n",
+      "Epoch 338/500\n",
+      "670/670 [==============================] - 34s 51ms/step - loss: 0.8365 - mse: 0.8365 - mae: 0.7127 - mape: 1018.7916 - val_loss: 0.8383 - val_mse: 0.8383 - val_mae: 0.7137 - val_mape: 871.1136\n",
+      "Epoch 339/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8365 - mse: 0.8365 - mae: 0.7127 - mape: 1060.9353 - val_loss: 0.8378 - val_mse: 0.8378 - val_mae: 0.7135 - val_mape: 952.2462\n",
+      "Epoch 340/500\n",
+      "670/670 [==============================] - 34s 51ms/step - loss: 0.8364 - mse: 0.8364 - mae: 0.7127 - mape: 1018.8184 - val_loss: 0.8371 - val_mse: 0.8371 - val_mae: 0.7129 - val_mape: 765.6105\n",
+      "Epoch 341/500\n",
+      "670/670 [==============================] - 33s 50ms/step - loss: 0.8365 - mse: 0.8365 - mae: 0.7127 - mape: 1048.8749 - val_loss: 0.8373 - val_mse: 0.8373 - val_mae: 0.7131 - val_mape: 863.8325\n",
+      "Epoch 342/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8364 - mse: 0.8364 - mae: 0.7127 - mape: 1044.1282 - val_loss: 0.8372 - val_mse: 0.8372 - val_mae: 0.7131 - val_mape: 787.4214\n",
+      "Epoch 343/500\n",
+      "670/670 [==============================] - 33s 50ms/step - loss: 0.8364 - mse: 0.8364 - mae: 0.7126 - mape: 1031.1995 - val_loss: 0.8372 - val_mse: 0.8372 - val_mae: 0.7131 - val_mape: 951.6322\n",
+      "Epoch 344/500\n",
+      "670/670 [==============================] - 34s 51ms/step - loss: 0.8364 - mse: 0.8364 - mae: 0.7127 - mape: 1020.5798 - val_loss: 0.8368 - val_mse: 0.8368 - val_mae: 0.7128 - val_mape: 899.1001\n",
+      "Epoch 345/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8363 - mse: 0.8363 - mae: 0.7126 - mape: 1034.9723 - val_loss: 0.8369 - val_mse: 0.8369 - val_mae: 0.7129 - val_mape: 933.3444\n",
+      "Epoch 346/500\n",
+      "670/670 [==============================] - 34s 51ms/step - loss: 0.8363 - mse: 0.8363 - mae: 0.7126 - mape: 1030.3092 - val_loss: 0.8368 - val_mse: 0.8368 - val_mae: 0.7128 - val_mape: 848.4882\n",
+      "Epoch 347/500\n",
+      "670/670 [==============================] - 34s 51ms/step - loss: 0.8363 - mse: 0.8363 - mae: 0.7126 - mape: 1045.2410 - val_loss: 0.8370 - val_mse: 0.8370 - val_mae: 0.7129 - val_mape: 887.5440\n",
+      "Epoch 348/500\n",
+      "670/670 [==============================] - 34s 50ms/step - loss: 0.8362 - mse: 0.8362 - mae: 0.7125 - mape: 1012.7143 - val_loss: 0.8371 - val_mse: 0.8371 - val_mae: 0.7130 - val_mape: 865.5956\n",
+      "Epoch 349/500\n",
+      "669/670 [============================>.] - ETA: 0s - loss: 0.8363 - mse: 0.8363 - mae: 0.7126 - mape: 1015.7878"
      ]
     }
    ],
