--- a/test.ipynb
+++ b/test.ipynb
@@ -409,6 +409,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path = '/home/halin/Autoencoder/Models/CNN_001'\n",
+    "# models = load_models(path)\n",
+    "# results_path = path + '/' + 'results_test.csv'\n",
+    "# results = pd.read_csv(results_path)\n",
+    "# results['Noise reduction'] = results['Noise reduction'].astype('object')\n",
+    "# for i, model in enumerate(models):\n",
+    "#   threshold_value, tpr, fpr, tnr, fnr, noise_reduction_factor = noise_reduction_curve_multi_models([model],path, fpr=0.05, save_outputs=False)\n",
+    "  \n",
+    "#   results.loc[[i], ['True pos.']] = tpr\n",
+    "#   results.at[i,'Noise reduction'] = noise_reduction_factor\n",
+    "\n",
+    "# results.to_csv(results_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
